2023-08-09T08:20:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5806615898 # 1100
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-09
* notice: last 14d: unq all: 8 26
* notice: prev accum: outdated-unq outdated-all / unq all: 428 748 / 447 773
* notice: next accum: outdated-unq outdated-all / unq all: 428 748 / 448 775
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -1 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-07-26 2023-08-09]

2023-08-08T16:20:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5799445615 # 1098
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-08
* notice: last 14d: unq all: 7 25
* notice: prev accum: outdated-unq outdated-all / unq all: 426 745 / 445 771
* notice: next accum: outdated-unq outdated-all / unq all: 428 748 / 447 773
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [2023-07-25] / [2023-08-08]

2023-08-08T08:18:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5794499816 # 1097
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-08
* notice: last 14d: unq all: 5 24
* notice: prev accum: outdated-unq outdated-all / unq all: 426 745 / 444 770
* notice: next accum: outdated-unq outdated-all / unq all: 426 745 / 445 771
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-25 2023-08-08]

2023-08-07T16:19:48Z: