@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-09T08:20:22Z",
-  "count_outdated" : 748,
-  "uniques_outdated" : 428,
-  "count" : 775,
-  "uniques" : 448,
+  "timestamp" : "2023-08-09T16:22:55Z",
+  "count_outdated" : 750,
+  "uniques_outdated" : 429,
+  "count" : 776,
+  "uniques" : 449,
   "clones" : [
-    {
-      "timestamp": "2023-07-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-27T00:00:00Z",
       "count": 2,
@@ -115,12 +106,12 @@
     },
     {
       "timestamp": "2023-08-09T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
