@@ -3,11 +3,6 @@
   "uniques": 8,
   "clones": [
     {
-      "timestamp": "2023-07-26T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-07-27T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -64,8 +59,8 @@
     },
     {
       "timestamp": "2023-08-09T00:00:00Z",
-      "count": 2,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
